--- a/camera.html
+++ b/camera.html
@@ -128,10 +128,10 @@
 			for (let i = 0; i < barcodes.length; ++i) {
 				let barcode = barcodes[i]
 				boxes[i].innerHTML = `${barcode.format}<br><a href="${barcode.rawValue}">${barcode.rawValue}</a>`
-				boxes[i].left = vidX + barcode.boundingBox['x']
-				boxes[i].top = vidY + barcode.boundingBox['y']
-				boxes[i].height = barcode.boundingBox['height']
-				boxes[i].width = barcode.boundingBox['width']
+				boxes[i].left = (vidX + barcode.boundingBox['x']) + 'px'
+				boxes[i].top = (vidY + barcode.boundingBox['y']) + 'px'
+				boxes[i].height = barcode.boundingBox['height'] + 'px'
+				boxes[i].width = barcode.boundingBox['width'] + 'px'
 			}
 			return barcodes
 		}
