--- a/camera.html
+++ b/camera.html
@@ -125,8 +125,9 @@
 			overlay.innerText = ''
 			for (let i = 0; i < barcodes.length; ++i) {
 				let barcode = barcodes[i]
-				let box = document.createElement('div', {class: 'box'})
-				box.innerHTML = `<a href="${barcode.rawValue}">${barcode.rawValue}</a>}`
+				let box = document.createElement('div', {className: 'box'})
+				//box.className = 'box'
+				box.innerHTML = `<a href="${barcode.rawValue}">${barcode.rawValue}</a>`
 				box.style.left = (vidX + barcode.boundingBox.x) + 'px'
 				box.style.top = (vidY + barcode.boundingBox.y) + 'px'
 				box.style.height = barcode.boundingBox.height + 'px'
@@ -136,6 +137,7 @@
 			return barcodes
 		}
 	</script>
+	<button onclick="document.body.innerText = document.body.innerHTML">View source</button>
 </body>
 
 </html>
