--- a/dice.html
+++ b/dice.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
+	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Dice Roller by Cees Timmerman, 2022-07-14</title>
 	<link rel="icon"
@@ -62,13 +63,14 @@
 			margin: 1em;
 			padding: 0.5em;
 			box-shadow: 6px 6px 6px #00000066;
+			width: -moz-fit-content;
 			width: fit-content;
 		}
 
 		.inset {
-			background-clip: text;
 			-moz-background-clip: text;
 			-webkit-background-clip: text;
+			background-clip: text;
 			background-color: black;
 			color: transparent;
 			text-shadow: 1px 1px 1px var(--bgcolor);
