Sound-activated camera go!

--- a/camera.html
+++ b/camera.html
@@ -6,16 +6,15 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Camera / QR scanner, by Cees Timmerman 2022-07-25</title>
 	<link rel="icon"
-		href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 112 100%22><text y=%22.9em%22 font-size=%2290%22>📷</text></svg>">
+		href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%222 4 100 100%22><text y=%22.9em%22 font-size=%2290%22>📷</text></svg>">
 	<style>
-		body {
-			background-color: black;
+		html {
+			background-color: #444;
 			color: white;
 		}
 
-		img,
-		video {
-			border: 1px solid blue;
+		img {
+			width: 240px;
 		}
 
 		.box {
@@ -33,8 +32,12 @@
 		}
 
 		#pix {
-			max-height: 40vh;
 			overflow: auto;
+		}
+
+		#vu {
+			background: linear-gradient(red, lightgreen);
+			border: 1px solid red;
 		}
 	</style>
 </head>
@@ -43,26 +46,41 @@
 	<div>
 		<label for="audioSource">Audio: </label><select id="audioSource"></select>
 		<label for="videoSource">Video: </label><select id="videoSource"></select>
-		<button onclick="snap()">Snapshot</button><br>
-		<video autoplay muted playsinline></video>
-		<div id="overlay"></div>
-		<div id="pix"></div>
-		<div id="log"></div>
+		<button onclick="snap()">Snapshot</button>
+		<label for="vu-trigger">Autosnap at </label><input id="vu-trigger" onchange="vu_trigger = parseInt(this.value)" type="number" size="4" max="120" min="-1" value="69">
 	</div>
+	<div id="log"></div>
+	<table>
+		<tr>
+			<td nowrap>
+				<canvas id="vu" width="50" height="100"></canvas>
+				<video autoplay muted playsinline></video>
+				<div id="overlay"></div>
+			</td>
+			<td>
+				<div id="pix"></div>
+			</td>
+		</tr>
+	</table>
 	<script>
 		'use strict'
 		onbeforeunload = () => false
 
-		const pixEl = document.getElementById('pix')
-		const logEl = document.getElementById('log')
+		const el = id => document.getElementById(id)
+		const pixEl = el('pix')
+		const logEl = el('log')
+		const vu = el('vu').getContext('2d')
+		vu.fillStyle = 'white'
 		const vidEl = document.querySelector('video')
 		const vidX = vidEl.offsetLeft
 		const vidY = vidEl.offsetTop
-		const overlay = document.getElementById('overlay')
+		const overlay = el('overlay')
 		const audSel = document.querySelector('select#audioSource')
 		const vidSel = document.querySelector('select#videoSource')
 		audSel.onchange = setSource
 		vidSel.onchange = setSource
+		let vu_trigger
+		el('vu-trigger').onchange()
 
 		navigator.mediaDevices.enumerateDevices().then(devices => {
 			devices.forEach(device => {
@@ -88,8 +106,20 @@
 				video: { deviceId: videoSource ? { exact: videoSource } : undefined },
 			}
 			await navigator.mediaDevices.getUserMedia(query)
-				.then(src => vidEl.srcObject = src)
-				.catch(err => log(err))
+				.then(async src => {
+						vidEl.srcObject = src
+						await sleep(1000).then(a => {
+							el('pix').style.height = getComputedStyle(vidEl).height
+							vu.canvas.height = parseInt(getComputedStyle(vidEl).height)
+							listen(src)
+						})
+					}
+				)
+				.catch(err => {
+						log(err)
+						throw(err)
+					}
+				)
 			
 			if (!('BarcodeDetector' in window)) return
 			barcodeDetector = new BarcodeDetector()
@@ -111,10 +141,9 @@
 			*/
 			const img = document.createElement('img')
 			img.src = canvas.toDataURL('image/jpg')
-			img.width = 320
 			img.onclick = e => scan(img)
 			pixEl.appendChild(img)
-			await sleep(0.2)
+			await sleep(200)
 			img.scrollIntoView()
 
 			if (!barcodeDetector) return
@@ -146,6 +175,38 @@
 				overlay.appendChild(box)
 			}
 			return barcodes
+		}
+
+		// https://codepen.io/travisholliday/pen/AxmyVd
+		function listen(stream) {
+			const audioContext = new AudioContext()
+			const analyser = audioContext.createAnalyser()
+			const microphone = audioContext.createMediaStreamSource(stream)
+			const javascriptNode = audioContext.createScriptProcessor(2048, 1, 1)
+
+			analyser.smoothingTimeConstant = 0.5
+			analyser.fftSize = 1024
+
+			microphone.connect(analyser)
+			analyser.connect(javascriptNode)
+			javascriptNode.connect(audioContext.destination)
+			javascriptNode.onaudioprocess = function() {
+				const array = new Uint8Array(analyser.frequencyBinCount)
+				analyser.getByteFrequencyData(array)
+				let total = 0
+				const length = array.length
+				for (let i = 0; i < length; ++i) total += array[i]
+				const level = total / length * 2
+				const percentage = level / 100
+				const h  = vu.canvas.height
+				vu.clearRect(0, 0, 50, h)
+				vu.fillStyle = '#444'
+				vu.fillRect(0, 0, 50, h - level/100*h)
+				vu.fillStyle = 'white'
+				vu.font = '32px impact'
+				vu.fillText(Math.round(level), 0, h/2)
+				if (level >= vu_trigger) snap()
+			}
 		}
 	</script>
 </body>
